Fixed menu button on mobile.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -144,6 +144,11 @@ body {
   letter-spacing: .26em;
 }
 
+.branding {
+  margin-left: .5em;
+  margin-top: .25em;
+}
+
 .branding .first-line {
   white-space: nowrap;
 }
